@@ -10,21 +10,21 @@ describe Ext::ReminderGroup do
   end
 
   it "should create a new reminder phone book with valid attributes" do
-    type = Ext::ReminderGroup.new @valid
-    type.save.should eq true
+    reminder_group = Ext::ReminderGroup.new @valid
+    reminder_group.save.should eq true
   end
 
   it "should require name" do
     attrs = @valid.merge(:name => "")
-    type = Ext::ReminderGroup.new attrs
-    type.save.should eq false
+    reminder_group = Ext::ReminderGroup.new attrs
+    reminder_group.save.should eq false
   end
 
   it "should require name to be unique in scope of project" do
-    type = Ext::ReminderGroup.new @valid
-    type.save.should eq true
-    type = Ext::ReminderGroup.new @valid
-    type.save.should eq false
+    reminder_group = Ext::ReminderGroup.new @valid
+    reminder_group.save.should eq true
+    reminder_group = Ext::ReminderGroup.new @valid
+    reminder_group.save.should eq false
   end
 
   describe "#register_address" do
@@ -70,6 +70,34 @@ describe Ext::ReminderGroup do
       # assert after process
       reminder_group.addresses.size.should == 1
       reminder_group.addresses.first.should == "1000"
+    end
+  end
+
+  describe "#deserialized_to_array" do
+    it "should return an empty array when string is null" do
+      string = nil
+      array = Ext::ReminderGroup.deserialized_to_array string
+      array.should be_empty
+    end
+
+    it "should return an empty array when string is empty" do
+      string = ""
+      array = Ext::ReminderGroup.deserialized_to_array string
+      array.should be_empty
+    end
+
+    it "should return an empty array when string is '---'" do
+      string = "---"
+      array = Ext::ReminderGroup.deserialized_to_array string
+      array.should be_empty
+    end
+
+    it "should return as Array of 2 elements and remove all special characters of those elements" do
+      string = "---\n- '855884042998'\n- '85592327379'"
+      array = Ext::ReminderGroup.deserialized_to_array string
+      array.count.should eq(2)
+      array.first.should eq("855884042998")
+      array.last.should eq("85592327379")
     end
   end
 
