@@ -1,4 +1,5 @@
   + Bugs:
+    * [Bug 18] fix bug reminder group's deserialized array
     * [Bug 17] allow reminder group's address UI enter only phone number pattern ([+][0-9])
 
 1.2.0 (2013-09-27 Kakada <kakada@instedd.org)
